[package]
name = "my-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.15", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
